-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P4
-
Affects Version/s: 21, 23, 24, 25, 26
-
Component/s: hotspot
-
b26
-
generic
-
generic
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8374385 | 25.0.3 | Matthias Baesken | P4 | Resolved | Fixed | b01 |
In the review of JDK-8333522 it has been discussed that we might run into issues because of failing sysinfo.
However we miss checking the return values at some places, this might need adjustment.
However we miss checking the return values at some places, this might need adjustment.
- backported by
-
JDK-8374385 Check return values of sysinfo
-
- Resolved
-
- links to
-
Commit(master)
openjdk/jdk25u-dev/e11ef993
-
Commit(master)
openjdk/jdk/30410fe2
-
Review(master)
openjdk/jdk25u-dev/123
-
Review(master)
openjdk/jdk/28317