8333871: Check return values of sysinfo

Reviewed-by: dholmes, mdoerr, alanb